--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ body {
   text-decoration: none;
 }
 .section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+
   color: var(--main-text-color);
 
   font-weight: 700;
@@ -38,10 +41,29 @@ body {
   line-height: 1.16;
   text-align: center;
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
+  /* background-color: black; */
+}
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1200px;
+
+  /* outline: 2px solid green; */
+}
+
 /* Делаем шапку */
 .page-header {
+  display: flex;
+  outline: 2px solid red;
   background-color: var(--white);
 }
+
 /* название фирмы */
 .firm-name {
   font-family: Raleway, sans-serif;
@@ -56,6 +78,7 @@ body {
 .second-firm-name {
   color: var(--main-text-color);
 }
+
 /* навигация сайта */
 .site-nav .link {
   color: var(--main-text-color);
@@ -67,6 +90,7 @@ body {
 .contact {
   color: var(--title-text-color);
 }
+
 .contact:hover,
 .contact:focus {
   color: var(--accent-text);
@@ -79,20 +103,36 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
+
+/* Подсветка актуально открытой страницы */
+.link.current {
+  color: var(--accent-text);
+}
+
 /* делаем блок герой */
 .hero {
   background-color: var(--background-hero-section);
+  text-align: center;
 }
 .hero-title {
+  margin-top: 0;
+  margin-bottom: 30px;
   color: var(--white);
 
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
-  text-align: center;
   letter-spacing: 0.06em;
+
+  /* background-color: red; */
 }
 .hero-button {
+  padding: 10px 32px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  min-width: 200px;
+  text-align: center;
+
   color: var(--white);
   background-color: var(--accent-text);
 
@@ -117,17 +157,25 @@ body {
   overflow: hidden;
 }
 
-.features .title {
-  color: var(--main-text-color);
+.features.list {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.title {
+.features.list .title {
+  margin-top: 0;
+  margin-bottom: 10px;
+
+  color: var(--main-text-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
 }
 
-.text {
+.features.list .text {
+  margin-top: 0;
+  margin-bottom: 0;
+
   color: var(--title-text-color);
 
   font-weight: 400;
@@ -135,13 +183,32 @@ body {
   line-height: 1.7;
 }
 
-/* чем мы занимаемся, нечего размечать, все в других блоках, Наша команда*/
+/* чем мы занимаемся, все остальное в других блоках, Наша команда*/
+
+.projects.list {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 
 /* наша команда */
 .section.team {
   background-color: var(--background-team-section);
 }
+
+.team.list {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.photo {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
 .staff-name {
+  margin-top: 0;
+  margin-bottom: 10px;
+
   color: var(--main-text-color);
 
   font-weight: 500;
@@ -149,6 +216,9 @@ body {
   line-height: 1.19;
 }
 .specialty {
+  margin-top: 0;
+  margin-bottom: 30px;
+
   color: var(--title-text-color);
 
   font-weight: 400;
