--- a/css/style.css
+++ b/css/style.css
@@ -59,13 +59,19 @@ body {
 
 /* Делаем шапку */
 .page-header {
-  display: flex;
   outline: 2px solid red;
   background-color: var(--white);
 }
 
+.header.container {
+  display: flex;
+  align-items: center;
+}
+
 /* название фирмы */
 .firm-name {
+  margin-right: 93px;
+
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -80,11 +86,17 @@ body {
 }
 
 /* навигация сайта */
+.nav {
+  display: flex;
+  align-items: center;
+}
+
 .site-nav.list {
   display: flex;
 }
 
-.site-nav .link {
+.site-nav .link,
+.contact.link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -95,19 +107,30 @@ body {
 .site-nav .link:focus {
   color: var(--accent-text);
 }
-.contact {
-  color: var(--title-text-color);
-}
 
 .site-nav .item:not(:last-child) {
   margin-right: 50px;
 }
 
-.contact:hover,
-.contact:focus {
+.contact {
+  display: flex;
+  margin-left: auto;
+
+  color: var(--title-text-color);
+}
+
+.contact.link:not(:last-child) {
+  margin-right: 50px;
+}
+
+.contact.link:hover,
+.contact.link:focus {
   color: var(--accent-text);
 }
 
+.site-nav.list {
+  padding-left: 0;
+}
 .site-nav.list,
 .contact.link {
   font-weight: 500;
