--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,7 @@ body {
   text-align: center;
 }
 .section {
-  padding-top: 94px;
   padding-bottom: 94px;
-
-  /* background-color: black; */
 }
 .container {
   margin-left: auto;
@@ -57,6 +54,9 @@ body {
   /* outline: 2px solid green; */
 }
 
+img {
+  display: block;
+}
 /* Делаем шапку */
 .page-header {
   outline: 2px solid red;
@@ -177,8 +177,9 @@ body {
   line-height: 1.88;
   letter-spacing: 0.06em;
 }
-/* блок особеностей */
+/* Блок Особеностей */
 
+/* Скрываем назву секции */
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -192,9 +193,24 @@ body {
   overflow: hidden;
 }
 
+.section.features {
+  padding-top: 94px;
+}
+
 .features.list {
+  display: flex;
+
+  padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.features.list > .item {
+  min-width: 270px;
+}
+
+.features.list > .item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .features.list .title {
@@ -221,6 +237,9 @@ body {
 /* чем мы занимаемся, все остальное в других блоках, Наша команда*/
 
 .projects.list {
+  display: flex;
+
+  padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
 }
