--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ img {
 }
 /* Делаем шапку */
 .page-header {
-  outline: 2px solid red;
+  border-bottom: 1px solid #ececec;
   background-color: var(--white);
 }
 
@@ -93,10 +93,12 @@ img {
 
 .site-nav.list {
   display: flex;
+
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.site-nav .link,
-.contact.link {
+.site-nav .link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -113,8 +115,9 @@ img {
 }
 
 .contact {
-  display: flex;
   margin-left: auto;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
   color: var(--title-text-color);
 }
@@ -146,6 +149,9 @@ img {
 
 /* делаем блок герой */
 .hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+
   background-color: var(--background-hero-section);
   text-align: center;
 }
@@ -158,13 +164,12 @@ img {
   font-size: 44px;
   line-height: 1.4;
   letter-spacing: 0.06em;
-
-  /* background-color: red; */
 }
 .hero-button {
   padding: 10px 32px;
   border-radius: 4px;
-  border: 1px solid transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  /* border: 1px solid transparent; */
   min-width: 200px;
   text-align: center;
 
@@ -244,14 +249,34 @@ img {
   margin-bottom: 0;
 }
 
+.projects.list > .item:not(:last-child) {
+  margin-right: 30px;
+}
+
 /* наша команда */
 .section.team {
+  padding-top: 94px;
+
   background-color: var(--background-team-section);
 }
 
 .team.list {
+  display: flex;
+  text-align: center;
+
   margin-top: 0;
   margin-bottom: 0;
+  padding-left: 0;
+}
+
+.team.list > .item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team.list > .item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .photo {
@@ -281,7 +306,15 @@ img {
 }
 /* подвал */
 .page-footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
   background-color: var(--background-hero-section);
+}
+
+.footer.container > .firm-name {
+  margin-bottom: 20px;
+  display: block;
 }
 .third-firm-name {
   color: #ffffff;
@@ -294,7 +327,22 @@ img {
   font-size: 14px;
   line-height: 1.7;
 }
-.page-footer .link {
+
+.address > .list {
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.address.list > .item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.address.list .link.street {
+  color: var(--white);
+}
+
+.address.list .link {
   color: var(--footer-link-color);
 }
 
