--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,16 @@
 /* акцент #2196F3 */
 /* белый #FFFFFF */
 /* вторичный для подвала rgba(255, 255, 255, 0.6); */
-/* цвет body фона #e5e5e5 */
+/* цвет body фона #FFFFFF */
 /* цвет фона команды #f5f4fa */
 /* цвет фона героя  #2F303A; */
+/* цвет нижней линии в гарое #ECECEC */
 :root {
   --main-text-color: #212121;
   --title-text-color: #757575;
   --accent-text: #2196f3;
   --white: #ffffff;
-  --background-body-section: #e5e5e5;
+  --background-body-section: #ffffff;
   --background-team-section: #f5f4fa;
   --background-hero-section: #2f303a;
   --footer-link-color: rgba(255, 255, 255, 0.6);
@@ -166,12 +167,12 @@ img {
   letter-spacing: 0.06em;
 }
 .hero-button {
+  display: inline-block;
   padding: 10px 32px;
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  /* border: 1px solid transparent; */
+  border: 0px solid transparent;
   min-width: 200px;
-  text-align: center;
 
   color: var(--white);
   background-color: var(--accent-text);
@@ -347,9 +348,30 @@ img {
 }
 
 /* Страница Портфолио */
-.radio-button {
+
+.section.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.portfolio-button.list {
+  display: flex;
+  justify-content: center;
+
+  margin-top: 0;
+  margin-bottom: 50px;
+  padding-left: 0;
+}
+
+.portfolio-button .radio-button {
+  display: inline-block;
   color: var(--main-text-color);
   background-color: var(--background-team-section);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  border: 0 solid transparent;
+  padding: 6px 22px;
 
   font-family: Roboto;
   font-weight: 500;
@@ -357,12 +379,70 @@ img {
   line-height: 1.63;
   letter-spacing: 0.03em;
 }
-.radio-button:hover,
-.radio-button:focus {
+
+.portfolio-button .radio-button:hover,
+.portfolio-button .radio-button:focus {
   color: var(--white);
   background-color: var(--accent-text);
 }
+
+.portfolio-button.list > .button.item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.radio-button.first {
+  min-width: 73px;
+}
+
+.radio-button.second {
+  min-width: 128px;
+
+  padding: ;
+}
+
+.radio-button.third {
+  min-width: 145px;
+}
+
+.radio-button.fourth {
+  min-width: 103px;
+}
+
+.radio-button.fifth {
+  min-width: 130px;
+}
+
+.portfolio.list {
+  display: flex;
+  flex-wrap: wrap;
+
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+/* маржин 30px, 2маржина в строке, 3 элимента в строке */
+.portfolio.item {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+}
+
+.portfolio.item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.portfolio.item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
+}
+
+.portfolio-list-wrapper {
+  padding: 20px 24px;
+}
+
 .image-name {
+  margin-top: 0;
+  margin-bottom: 0;
+
   color: var(--main-text-color);
 
   font-weight: 700;
@@ -372,6 +452,9 @@ img {
 }
 
 .project-type {
+  margin-top: 0;
+  margin-bottom: 0;
+
   color: var(--title-text-color);
 
   font-weight: 400;
